# high_frequency_esp32c3

./: .gitignore  CMakeLists.txt  FIRMWARE_DOWNLOAD_GUIDE.md  QUICK_START.md  README.md  app.c  download_firmware.ps1  help.md  jtaglogs.txt  key.c  ledc_pwm.c  ledc_pwm.h  logs.txt  mqtt_ha_harmony.c  mqtt_ha_harmony.h  nvs_param.c  rtc_boot_reset.c  rtc_boot_reset.h  sdkconfig.defaults  setup_github_repo.sh  wifi_airkiss.c  wifi_airkiss.h
.claude/: settings.local.json
.github/workflows/: build.yml
downloaded_firmware/: 烧录说明.md
main/: CMakeLists.txt  app.c  app.h  key.c  key.h  mqtt_ha_harmony.c  nvs_param.c  nvs_param.h  wifi_airkiss.c  wifi_airkiss.h  wifi_prov.c  wifi_prov.h
main/html/: index.html
