idf_component_register(SRCS "../app.c"
                            "../nvs_param.c"
                            "../ledc_pwm.c"
                            "../wifi_airkiss.c"
                            "../mqtt_ha_harmony.c"
                            "../key.c"
                            "../rtc_boot_reset.c"
                    INCLUDE_DIRS "..")
